[package]
name = "kittyaudio"
description = "An audio playback library focusing on simplicity"
license = "MIT OR BSL-1.0"
version = "0.1.0"
exclude = ["assets/**"]
documentation = "https://docs.rs/kittyaudio"
homepage = "https://github.com/zeozeozeo/kittyaudio"
repository = "https://github.com/zeozeozeo/kittyaudio"
keywords = ["audio", "playback", "gamedev"]
categories = ["multimedia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.15.2", optional = true }
log = "0.4.20"
symphonia = { version = "0.5.3", features = ["all"], optional = true }
thiserror = "1.0.50"

[features]
default = ["use-symphonia", "playback"]
use-symphonia = ["symphonia"] # Audio decoding support with [`symphonia`].
playback = ["cpal"]           # Audio playback support with [`cpal`].
                              # Disable this if you want to use kittyaudio purely as an audio library.
