[package]
name = "kittyaudio"
description = "An audio playback library focusing on simplicity"
license = "MIT OR BSL-1.0"
version = "0.1.7"
exclude = ["assets/**"]
documentation = "https://docs.rs/kittyaudio"
homepage = "https://github.com/zeozeozeo/kittyaudio"
repository = "https://github.com/zeozeozeo/kittyaudio"
keywords = ["audio", "playback", "gamedev"]
categories = ["multimedia"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.15.2", optional = true }
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"], optional = true }
symphonia = { version = "0.5.3", features = ["all"], optional = true }
thiserror = "1.0.52"

[features]
default = ["symphonia", "cpal"]

## Audio decoding support
symphonia = ["dep:symphonia"]

## Audio playback support, disable if you want to use kittyaudio purely as an audio library
cpal = ["dep:cpal"]
