[package]
name = "kittyaudio"
description = "An audio playback library focusing on simplicity"
license = "Unlicense OR MIT OR BSL-1.0"
version = "0.2.0"
exclude = ["assets/**"]
documentation = "https://docs.rs/kittyaudio"
homepage = "https://github.com/zeozeozeo/kittyaudio"
repository = "https://github.com/zeozeozeo/kittyaudio"
keywords = ["audio", "playback", "gamedev"]
categories = ["multimedia"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.15.3", optional = true }
parking_lot = "0.12.3"
serde = { version = "1", features = ["derive"], optional = true }
symphonia = { version = "0.5.4", features = ["all"], optional = true }
thiserror = "2.0.11"

[features]
default = ["symphonia", "cpal"]

## Audio decoding support
symphonia = ["dep:symphonia"]

## Audio playback support, disable if you want to use kittyaudio purely as an audio library
cpal = ["dep:cpal"]
